{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 26,
  "lineage": "ee752545-9700-f540-48b1-a3aff1078b98",
  "resources": [
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767398128098:network-acl/acl-09e3a36564bd68a60",
            "default_network_acl_id": "acl-09e3a36564bd68a60",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-09e3a36564bd68a60",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "767398128098",
            "subnet_ids": [
              "subnet-0378be567c71b1da0",
              "subnet-03f52a1eecfc55ab4",
              "subnet-04e80595c96aaab20",
              "subnet-09cacc31bc390c7b6",
              "subnet-0afb705f2b8ee9711",
              "subnet-0bcdf3ffc1d251cfa"
            ],
            "tags": {
              "Enviornment": "dev",
              "Name": "vpc_dev-default",
              "Owner": "Harsh"
            },
            "tags_all": {
              "Enviornment": "dev",
              "Name": "vpc_dev-default",
              "Owner": "Harsh"
            },
            "vpc_id": "vpc-0d5c832de9ec9e141"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767398128098:route-table/rtb-0c3a63cf5db0a404a",
            "default_route_table_id": "rtb-0c3a63cf5db0a404a",
            "id": "rtb-0c3a63cf5db0a404a",
            "owner_id": "767398128098",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Enviornment": "dev",
              "Name": "vpc_dev-default",
              "Owner": "Harsh"
            },
            "tags_all": {
              "Enviornment": "dev",
              "Name": "vpc_dev-default",
              "Owner": "Harsh"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0d5c832de9ec9e141"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767398128098:security-group/sg-02a693d13a6a20a98",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-02a693d13a6a20a98",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "767398128098",
            "revoke_rules_on_delete": false,
            "tags": {
              "Enviornment": "dev",
              "Name": "vpc_dev-default",
              "Owner": "Harsh"
            },
            "tags_all": {
              "Enviornment": "dev",
              "Name": "vpc_dev-default",
              "Owner": "Harsh"
            },
            "vpc_id": "vpc-0d5c832de9ec9e141"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06f574a1c6abcd40c",
            "arn": "arn:aws:ec2:us-east-2:767398128098:elastic-ip/eipalloc-06f574a1c6abcd40c",
            "domain": "vpc",
            "id": "eipalloc-06f574a1c6abcd40c",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-131-16-14.us-east-2.compute.amazonaws.com",
            "public_ip": "3.131.16.14",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Enviornment": "dev",
              "Name": "vpc_dev-us-east-2a",
              "Owner": "Harsh"
            },
            "tags_all": {
              "Enviornment": "dev",
              "Name": "vpc_dev-us-east-2a",
              "Owner": "Harsh"
            },
            "vpc": true
          },
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.this",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767398128098:internet-gateway/igw-019fab34eb8822516",
            "id": "igw-019fab34eb8822516",
            "owner_id": "767398128098",
            "tags": {
              "Enviornment": "dev",
              "Name": "vpc_dev",
              "Owner": "Harsh"
            },
            "tags_all": {
              "Enviornment": "dev",
              "Name": "vpc_dev",
              "Owner": "Harsh"
            },
            "vpc_id": "vpc-0d5c832de9ec9e141"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06f574a1c6abcd40c",
            "association_id": "eipassoc-04ae0e8137a2d9912",
            "connectivity_type": "public",
            "id": "nat-05fa23e1b16590cf9",
            "network_interface_id": "eni-07e61db381e8232c3",
            "private_ip": "10.0.3.36",
            "public_ip": "3.131.16.14",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0bcdf3ffc1d251cfa",
            "tags": {
              "Enviornment": "dev",
              "Name": "vpc_dev-us-east-2a",
              "Owner": "Harsh"
            },
            "tags_all": {
              "Enviornment": "dev",
              "Name": "vpc_dev-us-east-2a",
              "Owner": "Harsh"
            }
          },
          "dependencies": [
            "module.my_vpc.aws_eip.nat",
            "module.my_vpc.aws_internet_gateway.this",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08af6291fa243bbf61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05fa23e1b16590cf9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08af6291fa243bbf6",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_eip.nat",
            "module.my_vpc.aws_internet_gateway.this",
            "module.my_vpc.aws_nat_gateway.this",
            "module.my_vpc.aws_route_table.private",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-019fab34eb8822516",
            "id": "r-rtb-011c1d8ad9118b2b81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-011c1d8ad9118b2b8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.this",
            "module.my_vpc.aws_route_table.public",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767398128098:route-table/rtb-0abaeabb50f91d73c",
            "id": "rtb-0abaeabb50f91d73c",
            "owner_id": "767398128098",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Enviornment": "dev",
              "Name": "vpc_dev-db",
              "Owner": "Harsh"
            },
            "tags_all": {
              "Enviornment": "dev",
              "Name": "vpc_dev-db",
              "Owner": "Harsh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5c832de9ec9e141"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767398128098:route-table/rtb-08af6291fa243bbf6",
            "id": "rtb-08af6291fa243bbf6",
            "owner_id": "767398128098",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Enviornment": "dev",
              "Name": "vpc_dev-private",
              "Owner": "Harsh"
            },
            "tags_all": {
              "Enviornment": "dev",
              "Name": "vpc_dev-private",
              "Owner": "Harsh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5c832de9ec9e141"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767398128098:route-table/rtb-011c1d8ad9118b2b8",
            "id": "rtb-011c1d8ad9118b2b8",
            "owner_id": "767398128098",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Enviornment": "dev",
              "Name": "vpc_dev-public",
              "Owner": "Harsh"
            },
            "tags_all": {
              "Enviornment": "dev",
              "Name": "vpc_dev-public",
              "Owner": "Harsh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5c832de9ec9e141"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0f7f0e87fb51011",
            "route_table_id": "rtb-0abaeabb50f91d73c",
            "subnet_id": "subnet-0afb705f2b8ee9711"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.database",
            "module.my_vpc.aws_route_table.private",
            "module.my_vpc.aws_subnet.database",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc6df6d0ec7bf24b",
            "route_table_id": "rtb-0abaeabb50f91d73c",
            "subnet_id": "subnet-0378be567c71b1da0"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.database",
            "module.my_vpc.aws_route_table.private",
            "module.my_vpc.aws_subnet.database",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b18b0037d66309c",
            "route_table_id": "rtb-08af6291fa243bbf6",
            "subnet_id": "subnet-03f52a1eecfc55ab4"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.private",
            "module.my_vpc.aws_subnet.private",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0438ca771542b18dd",
            "route_table_id": "rtb-08af6291fa243bbf6",
            "subnet_id": "subnet-04e80595c96aaab20"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.private",
            "module.my_vpc.aws_subnet.private",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001e53f82e8bb8061",
            "route_table_id": "rtb-011c1d8ad9118b2b8",
            "subnet_id": "subnet-0bcdf3ffc1d251cfa"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.public",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09aba4bb914aca733",
            "route_table_id": "rtb-011c1d8ad9118b2b8",
            "subnet_id": "subnet-09cacc31bc390c7b6"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.public",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767398128098:subnet/subnet-0afb705f2b8ee9711",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0afb705f2b8ee9711",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398128098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Enviornment": "dev",
              "Name": "database_subnets",
              "Owner": "Harsh"
            },
            "tags_all": {
              "Enviornment": "dev",
              "Name": "database_subnets",
              "Owner": "Harsh"
            },
            "vpc_id": "vpc-0d5c832de9ec9e141"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767398128098:subnet/subnet-0378be567c71b1da0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0378be567c71b1da0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398128098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Enviornment": "dev",
              "Name": "database_subnets",
              "Owner": "Harsh"
            },
            "tags_all": {
              "Enviornment": "dev",
              "Name": "database_subnets",
              "Owner": "Harsh"
            },
            "vpc_id": "vpc-0d5c832de9ec9e141"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767398128098:subnet/subnet-03f52a1eecfc55ab4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f52a1eecfc55ab4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398128098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Enviornment": "dev",
              "Name": "private_subnets",
              "Owner": "Harsh"
            },
            "tags_all": {
              "Enviornment": "dev",
              "Name": "private_subnets",
              "Owner": "Harsh"
            },
            "vpc_id": "vpc-0d5c832de9ec9e141"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767398128098:subnet/subnet-04e80595c96aaab20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e80595c96aaab20",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398128098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Enviornment": "dev",
              "Name": "private_subnets",
              "Owner": "Harsh"
            },
            "tags_all": {
              "Enviornment": "dev",
              "Name": "private_subnets",
              "Owner": "Harsh"
            },
            "vpc_id": "vpc-0d5c832de9ec9e141"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767398128098:subnet/subnet-0bcdf3ffc1d251cfa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bcdf3ffc1d251cfa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398128098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Enviornment": "dev",
              "Name": "public_subnets",
              "Owner": "Harsh"
            },
            "tags_all": {
              "Enviornment": "dev",
              "Name": "public_subnets",
              "Owner": "Harsh"
            },
            "vpc_id": "vpc-0d5c832de9ec9e141"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767398128098:subnet/subnet-09cacc31bc390c7b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09cacc31bc390c7b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398128098",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Enviornment": "dev",
              "Name": "public_subnets",
              "Owner": "Harsh"
            },
            "tags_all": {
              "Enviornment": "dev",
              "Name": "public_subnets",
              "Owner": "Harsh"
            },
            "vpc_id": "vpc-0d5c832de9ec9e141"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:767398128098:vpc/vpc-0d5c832de9ec9e141",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09e3a36564bd68a60",
            "default_route_table_id": "rtb-0c3a63cf5db0a404a",
            "default_security_group_id": "sg-02a693d13a6a20a98",
            "dhcp_options_id": "dopt-0a244f3e9f28a8761",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d5c832de9ec9e141",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c3a63cf5db0a404a",
            "owner_id": "767398128098",
            "tags": {
              "Enviornment": "dev",
              "Name": "vpc-dev",
              "Owner": "Harsh"
            },
            "tags_all": {
              "Enviornment": "dev",
              "Name": "vpc-dev",
              "Owner": "Harsh"
            }
          }
        }
      ]
    }
  ]
}